test_regress/t/t_param_up_bad.out
%Error: t/t_param_up_bad.v:15: Can't find definition of scope/variable: 'bar'
   assign a_bad = bar.foo;
                  ^~~
%Error: Exiting due to
